# nextjs-actix-template

./: .env_backend  .gitignore  Cargo.toml  next.config.mjs  package-lock.json  package.json  project-structure.txt  tailwind.config.ts
app/: layout.tsx  page.tsx  routes.ts
app/api/auth/[...nextauth]/: route.ts
app/api/get-token/: route.ts
app/components/: PlaceSelect.tsx  TourSearch.tsx
app/components/material/: NavBar.tsx  TourCard.tsx
app/components/mui/: DateTimeRangePicker.tsx  NavBar.tsx
app/components/unused/: FeatureCard.tsx  Footer.tsx  PageTitle.tsx  TeamCard.tsx
app/components/utils/: PrelineScript.tsx
app/sign-in/: page.tsx
app/utils/: api.ts  apiEndpoints.ts
backend/: Cargo.toml
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/middleware/: mod.rs  nextauth.rs
backend/src/routes/: mod.rs
backend/src/schema/: graphql.rs
public/css/: tailwind.css
