[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-identity = "0.7.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-utils = "3.0.1"
actix-web = "4.3.1"
async-graphql = { version = "7.0.5", features = ["chrono"] }
async-graphql-actix-web = "7.0.5"
base64 = "0.22.1"
chrono = "0.4.38"
clap = "4.5.4"
dotenv = "0.15.0"
hkdf = "0.12.4"
hyper = "1.3.1"
jsonwebtoken = "9.3.0"
josekit = "0.8.6"
juniper = "0.16.1"
juniper_actix = "0.5.0"
oauth2 = "4.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
shuttle-actix-web = "0.46.0"
shuttle-runtime = "0.46.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "time"] }
tokio = "1.26.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-actix-web = "0.7.10"
url = "2.2"
